configure url security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=notnull
 spring.security.user.password=notnull
+spring.security.user.roles=ADMIN
